--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>UI Components</title>
 </head>
 
-<body>
+<body ontouchstart="">
     <div class="wrapper">
  	<header class="header">
 	<div class="header__container _container">
